--- a/.github/workflows/package-onboarding.yaml
+++ b/.github/workflows/package-onboarding.yaml
@@ -37,7 +37,7 @@ jobs:
             -e GITHUB_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }} \
             -v ${{ github.workspace }}:/repo \
             gcr.io/openssf/scorecard:stable \
-            --checks=Contributors,Pinned-Dependencies,Signed-Releases,Binary-Artifacts,Code-Review,Dependency-Update-Tool,License,Packaging,SAST,Security-Policy,Vulnerabilities,Dangerous-Workflow,Fuzzing,CI-Tests,Token-Permissions,CII-Best-Practices,Maintained \
+            --checks=Contributors,Signed-Releases,Binary-Artifacts,Code-Review,License,Packaging,SAST,Security-Policy,Vulnerabilities,Dangerous-Workflow,CI-Tests,Token-Permissions,Maintained \
             --format json \
             --pypi ${{ steps.extract.outputs.package_name }})"
           echo "results<<EOF" >> $GITHUB_OUTPUT
@@ -66,7 +66,7 @@ jobs:
         id: check
         run: |
           score=${{ steps.scorecard.outputs.score }}
-          if (( $(echo "$score >= 7" | bc -l) )); then
+          if (( $(echo "$score >= 4" | bc -l) )); then
             echo "pass=true" >> $GITHUB_OUTPUT
           else
             echo "pass=false" >> $GITHUB_OUTPUT
@@ -75,7 +75,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: failing-score
-        if: ${{ fromJSON(steps.scorecard.outputs.score) < 7 }}
+        if: ${{ fromJSON(steps.scorecard.outputs.score) < 4 }}
         run: |
           gh issue edit ${{ github.event.issue.number }} --add-label needs-review
         env:
