Fix requirements for click-plugins
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -3,7 +3,8 @@
 
 packages:
   click-plugins:
-    package_name: click-plugins
+    requirements_in:
+      - setuptools
   delta-spark:
     package_name: delta-spark
   flatbuffers:
