--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -26,6 +26,9 @@ packages:
       - setuptools
   python-dateutil:
     package_name: python-dateutil
+  six:
+    requirements_in:
+      - setuptools
   wcwidth:
     requirements_in:
       - setuptools
