Onboard snowflake-connector-python package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -106,6 +106,7 @@ resources:
   - setuptools-scm
   - six
   - sniffio
+  - snowflake-connector-python
   - soupsieve
   - sqlparse
   - tableauserverclient
