Onboard google-cloud-logging package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -37,6 +37,7 @@ resources:
   - fsspec
   - google-api-core
   - google-auth
+  - google-cloud-logging
   - google-cloud-vision
   - googleapis-common-protos
   - graphviz
