Onboard cloudpickle package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -25,6 +25,7 @@ resources:
   - charset-normalizer
   - click
   - click-plugins
+  - cloudpickle
   - colorama
   - databricks-sql-connector
   - distlib
