--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -40,6 +40,7 @@ resources:
   - freezegun
   - fsspec
   - google-api-core
+  - google-api-python-client
   - google-auth
   - google-cloud-logging
   - google-cloud-vision
