Onboard python-telegram-bot package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -105,6 +105,7 @@ resources:
   - pyproject-metadata
   - pytest
   - python-dateutil
+  - python-telegram-bot
   - pytz
   - pyyaml
   - readme-renderer
