Onboard types-requests package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -140,6 +140,7 @@ resources:
   - trove-classifiers
   - types-psutil
   - types-python-dateutil
+  - types-requests
   - types-setuptools
   - typing-extensions
   - tzdata
