Fix appdirs package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -2,6 +2,9 @@
 # requirements detection.
 
 packages:
+  appdirs:
+    requirements_in:
+      - setuptools
   click-plugins:
     requirements_in:
       - setuptools
