Onboard grpcio-health-checking package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -50,6 +50,7 @@ resources:
   - google-cloud-vision
   - googleapis-common-protos
   - graphviz
+  - grpcio-health-checking
   - grpcio-status
   - h11
   - h2
