Onboard pycodestyle package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -103,6 +103,7 @@ resources:
   - propcache
   - pyasn1
   - pyasn1-modules
+  - pycodestyle
   - pycryptodomex
   - pydantic
   - pydantic-settings
