--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -39,6 +39,9 @@ packages:
   propcache:
     requirements_in:
       - Cython
+  pycodestyle:
+    requirements_in:
+      - setuptools
   python-dateutil:
     package_name: python-dateutil
   six:
