Onboard sqlalchemy-bigquery package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -141,6 +141,7 @@ resources:
   - sniffio
   - snowflake-connector-python
   - soupsieve
+  - sqlalchemy-bigquery
   - sqlparse
   - tableauserverclient
   - tabulate
