Onboard asgiref package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -5,6 +5,9 @@ packages:
   appdirs:
     requirements_in:
       - setuptools
+  asgiref:
+    requirements_in:
+      - setuptools
   click-plugins:
     requirements_in:
       - setuptools
