Onboard greenlet package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -53,6 +53,7 @@ resources:
   - google-cloud-vision
   - googleapis-common-protos
   - graphviz
+  - greenlet
   - grpcio-health-checking
   - grpcio-status
   - h11
