Onboard flake8 package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -13,6 +13,9 @@ packages:
       - setuptools
   delta-spark:
     package_name: delta-spark
+  flake8:
+    requirements_in:
+      - setuptools
   flatbuffers:
     requirements_in:
       - setuptools
