Onboard python-dotenv package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -122,6 +122,7 @@ resources:
   - pyproject-metadata
   - pytest
   - python-dateutil
+  - python-dotenv
   - python-telegram-bot
   - pytz
   - pyyaml
