Onboard azure-keyvault-secrets package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - async-timeout
   - attrs
   - awscli
+  - azure-keyvault-secrets
   - azure-storage-file-datalake
   - beautifulsoup4
   - black
