Onboard opentelemetry-instrumentation package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -97,6 +97,7 @@ resources:
   - ninja
   - numpy
   - opentelemetry-exporter-otlp
+  - opentelemetry-instrumentation
   - oscrypto
   - packaging
   - pandas
