Onboard gitpython package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -46,6 +46,7 @@ resources:
   - flatbuffers
   - freezegun
   - fsspec
+  - gitpython
   - google-api-core
   - google-api-python-client
   - google-auth
