Onboard typing-inspect package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -167,6 +167,7 @@ resources:
   - types-requests
   - types-setuptools
   - typing-extensions
+  - typing-inspect
   - tzdata
   - tzlocal
   - urllib3
