Onboard pytest-cov package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -127,6 +127,7 @@ resources:
   - pyproject-api
   - pyproject-metadata
   - pytest
+  - pytest-cov
   - python-dateutil
   - python-dotenv
   - python-telegram-bot
