Onboard jsonpointer package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -30,6 +30,9 @@ packages:
       - hatch-fancy-pypi-readme
       - ninja
       - patchelf
+  jsonpointer:
+    requirements_in:
+      - setuptools
   mock:
     requirements_in:
       - setuptools
