--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -56,6 +56,9 @@ packages:
   python-dotenv:
     requirements_in:
       - setuptools
+  setproctitle:
+    requirements_in:
+      - setuptools
   six:
     requirements_in:
       - setuptools
