Onboard azure-storage-blob package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - attrs
   - awscli
   - azure-keyvault-secrets
+  - azure-storage-blob
   - azure-storage-file-datalake
   - beautifulsoup4
   - black
