--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -106,6 +106,7 @@ resources:
   - numpy
   - opentelemetry-exporter-otlp
   - opentelemetry-instrumentation
+  - opentelemetry-instrumentation-requests
   - oscrypto
   - packaging
   - pandas
