--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -19,6 +19,9 @@ packages:
   flatbuffers:
     requirements_in:
       - setuptools
+  frozenlist:
+    requirements_in:
+      - Cython
   grpcio-health-checking:
     requirements_in:
       - setuptools
