Onboard sortedcontainers package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -164,6 +164,7 @@ resources:
   - six
   - sniffio
   - snowflake-connector-python
+  - sortedcontainers
   - soupsieve
   - sqlalchemy-bigquery
   - sqlparse
