--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -33,6 +33,9 @@ packages:
       - hatch-fancy-pypi-readme
       - ninja
       - patchelf
+  inflection:
+    requirements_in:
+      - setuptools
   jsonpointer:
     requirements_in:
       - setuptools
