--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -34,6 +34,7 @@ resources:
   - cloudpickle
   - colorama
   - databricks-sql-connector
+  - dataclasses-json
   - debugpy
   - deepdiff
   - distlib
