Onboard python-json-logger package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -146,6 +146,7 @@ resources:
   - pytest-cov
   - python-dateutil
   - python-dotenv
+  - python-json-logger
   - python-telegram-bot
   - pytz
   - pyyaml
