Onboard smart-open package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -169,6 +169,7 @@ resources:
   - setuptools
   - setuptools-scm
   - six
+  - smart-open
   - sniffio
   - snowflake-connector-python
   - sortedcontainers
