Onboard gunicorn package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -69,6 +69,7 @@ resources:
   - greenlet
   - grpcio-health-checking
   - grpcio-status
+  - gunicorn
   - h11
   - h2
   - hatch-fancy-pypi-readme
