Onboard simplejson package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -65,6 +65,9 @@ packages:
   setproctitle:
     requirements_in:
       - setuptools
+  simplejson:
+    requirements_in:
+      - setuptools
   six:
     requirements_in:
       - setuptools
