Onboard databricks-sdk package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -33,6 +33,7 @@ resources:
   - click-plugins
   - cloudpickle
   - colorama
+  - databricks-sdk
   - databricks-sql-connector
   - dataclasses-json
   - debugpy
