Onboard toml package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -74,6 +74,9 @@ packages:
   sortedcontainers:
     requirements_in:
       - setuptools
+  toml:
+    requirements_in:
+      - setuptools
   toolz:
     requirements_in:
       - setuptools
