Onboard installer package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -87,6 +87,7 @@ resources:
   - importlib-metadata
   - inflection
   - iniconfig
+  - installer
   - isort
   - itsdangerous
   - jaraco-functools
