Onboard importlib-resources package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -87,6 +87,7 @@ resources:
   - hyperframe
   - idna
   - importlib-metadata
+  - importlib-resources
   - inflection
   - iniconfig
   - installer
