Onboard mccabe package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -108,6 +108,7 @@ resources:
   - markupsafe
   - marshmallow
   - matplotlib-inline
+  - mccabe
   - mdurl
   - meson-python
   - microsoft-kiota-http
