Onboard starlette package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -190,6 +190,7 @@ resources:
   - soupsieve
   - sqlalchemy-bigquery
   - sqlparse
+  - starlette
   - tableauserverclient
   - tabulate
   - tblib
