Onboard slack-sdk package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -183,6 +183,7 @@ resources:
   - setuptools-scm
   - simplejson
   - six
+  - slack-sdk
   - smart-open
   - sniffio
   - snowflake-connector-python
