Onboard sqlalchemy package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -189,6 +189,7 @@ resources:
   - snowflake-connector-python
   - sortedcontainers
   - soupsieve
+  - sqlalchemy
   - sqlalchemy-bigquery
   - sqlparse
   - starlette
