Onboard requests-aws4auth package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -166,6 +166,7 @@ resources:
   - pyyaml
   - readme-renderer
   - requests
+  - requests-aws4auth
   - responses
   - retry
   - rfc3986-validator
