--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -60,6 +60,9 @@ packages:
   pycodestyle:
     requirements_in:
       - setuptools
+  pyspark:
+    requirements_in:
+      - setuptools
   python-dateutil:
     package_name: python-dateutil
   python-dotenv:
