Onboard google-cloud-resource-manager package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -69,6 +69,7 @@ resources:
   - google-cloud-bigtable
   - google-cloud-dataproc
   - google-cloud-logging
+  - google-cloud-resource-manager
   - google-cloud-vision
   - googleapis-common-protos
   - graphviz
