Onboard pandocfilters package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -48,6 +48,9 @@ packages:
   oscrypto:
     requirements_in:
       - setuptools
+  pandocfilters:
+    requirements_in:
+      - setuptools
   pkgutil-resolve-name:
     requirements_in:
       - setuptools
