Onboard cfgv package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -8,6 +8,9 @@ packages:
   asgiref:
     requirements_in:
       - setuptools
+  cfgv:
+    requirements_in:
+      - setuptools
   click-plugins:
     requirements_in:
       - setuptools
