Onboard py4j package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -63,6 +63,9 @@ packages:
   propcache:
     requirements_in:
       - Cython
+  py4j:
+    requirements_in:
+      - setuptools
   pycodestyle:
     requirements_in:
       - setuptools
