Onboard typing-inspection package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -219,6 +219,7 @@ resources:
   - types-setuptools
   - typing-extensions
   - typing-inspect
+  - typing-inspection
   - tzdata
   - tzlocal
   - urllib3
