Onboard types-protobuf package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -214,6 +214,7 @@ resources:
   - tox
   - tqdm
   - trove-classifiers
+  - types-protobuf
   - types-psutil
   - types-python-dateutil
   - types-requests
