Onboard backoff package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
   - azure-keyvault-secrets
   - azure-storage-blob
   - azure-storage-file-datalake
+  - backoff
   - beautifulsoup4
   - black
   - blinker
