Onboard gitdb package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -25,6 +25,9 @@ packages:
   frozenlist:
     requirements_in:
       - Cython
+  gitdb:
+    requirements_in:
+      - setuptools
   grpcio-health-checking:
     requirements_in:
       - setuptools
