Onboard coverage package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -36,6 +36,7 @@ resources:
   - click-plugins
   - cloudpickle
   - colorama
+  - coverage
   - databricks-sdk
   - databricks-sql-connector
   - dataclasses-json
