Onboard opentelemetry-sdk package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -135,6 +135,7 @@ resources:
   - opentelemetry-exporter-otlp
   - opentelemetry-instrumentation
   - opentelemetry-instrumentation-requests
+  - opentelemetry-sdk
   - oscrypto
   - packaging
   - pandas
