Onboard sqlalchemy-spanner package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -206,6 +206,7 @@ resources:
   - soupsieve
   - sqlalchemy
   - sqlalchemy-bigquery
+  - sqlalchemy-spanner
   - sqlparse
   - starlette
   - tableauserverclient
