Onboard smmap package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -89,6 +89,9 @@ packages:
   six:
     requirements_in:
       - setuptools
+  smmap:
+    requirements_in:
+      - setuptools
   sortedcontainers:
     requirements_in:
       - setuptools
