Onboard backports-tarfile package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - azure-storage-blob
   - azure-storage-file-datalake
   - backoff
+  - backports-tarfile
   - beautifulsoup4
   - black
   - blinker
