Onboard crashtest package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -39,6 +39,7 @@ resources:
   - cloudpickle
   - colorama
   - coverage
+  - crashtest
   - databricks-sdk
   - databricks-sql-connector
   - dataclasses-json
