Onboard google-ads package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -71,6 +71,7 @@ resources:
   - fsspec
   - gitdb
   - gitpython
+  - google-ads
   - google-api-core
   - google-api-python-client
   - google-auth
