Onboard authlib package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - asttokens
   - async-timeout
   - attrs
+  - authlib
   - awscli
   - azure-keyvault-secrets
   - azure-storage-blob
