Onboard sshtunnel package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -223,6 +223,7 @@ resources:
   - sqlalchemy-bigquery
   - sqlalchemy-spanner
   - sqlparse
+  - sshtunnel
   - starlette
   - tableauserverclient
   - tabulate
