Onboard azure-core package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
   - attrs
   - authlib
   - awscli
+  - azure-core
   - azure-keyvault-secrets
   - azure-storage-blob
   - azure-storage-file-datalake
