Onboard rfc3986 package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -89,6 +89,9 @@ packages:
   python-dotenv:
     requirements_in:
       - setuptools
+  rfc3986:
+    requirements_in:
+      - setuptools
   setproctitle:
     requirements_in:
       - setuptools
