Onboard typeguard package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -244,6 +244,7 @@ resources:
   - tox
   - tqdm
   - trove-classifiers
+  - typeguard
   - types-protobuf
   - types-psutil
   - types-python-dateutil
