Onboard pyrsistent package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -184,6 +184,7 @@ resources:
   - pyproject-api
   - pyproject-hooks
   - pyproject-metadata
+  - pyrsistent
   - pyspark
   - pytest
   - pytest-cov
