Install latest poetry pkg
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/.github/workflows/package-onboarding.yaml
+++ b/.github/workflows/package-onboarding.yaml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Install Poetry
         run: |
-          pipx install --pip-args=--constraint="$(pwd)/.github/workflows/constraints.txt" poetry
+          pipx install poetry
           poetry --version
 
       - name: Extract package name from issue
@@ -168,7 +168,7 @@ jobs:
 
       - name: Install Poetry
         run: |
-          pipx install --pip-args=--constraint="$(pwd)/.github/workflows/constraints.txt" poetry
+          pipx install poetry
           poetry --version
 
       - name: Extract package name from issue
