Onboard google-cloud-storage package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -83,6 +83,7 @@ resources:
   - google-cloud-dataproc
   - google-cloud-logging
   - google-cloud-resource-manager
+  - google-cloud-storage
   - google-cloud-vision
   - googleapis-common-protos
   - graphviz
