Onboard cycler package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -42,6 +42,7 @@ resources:
   - colorama
   - coverage
   - crashtest
+  - cycler
   - databricks-sdk
   - databricks-sql-connector
   - dataclasses-json
