--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -147,6 +147,7 @@ resources:
   - ninja
   - nodeenv
   - numpy
+  - oauth2client
   - openpyxl
   - opentelemetry-exporter-otlp
   - opentelemetry-instrumentation
