Onboard google-crc32c package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -89,6 +89,7 @@ resources:
   - google-cloud-resource-manager
   - google-cloud-storage
   - google-cloud-vision
+  - google-crc32c
   - googleapis-common-protos
   - graphviz
   - greenlet
