Onboard graphql-core package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -91,6 +91,7 @@ resources:
   - google-cloud-vision
   - google-crc32c
   - googleapis-common-protos
+  - graphql-core
   - graphviz
   - greenlet
   - grpcio-health-checking
