Onboard pyflakes package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -81,6 +81,9 @@ packages:
   pycodestyle:
     requirements_in:
       - setuptools
+  pyflakes:
+    requirements_in:
+      - setuptools
   pyspark:
     requirements_in:
       - setuptools
