Onboard pexpect package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -66,6 +66,9 @@ packages:
   parso:
     requirements_in:
       - setuptools
+  pexpect:
+    requirements_in:
+      - setuptools
   pkgutil-resolve-name:
     requirements_in:
       - setuptools
