Onboard opentelemetry-util-http package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -160,6 +160,7 @@ resources:
   - opentelemetry-instrumentation
   - opentelemetry-instrumentation-requests
   - opentelemetry-sdk
+  - opentelemetry-util-http
   - oscrypto
   - packaging
   - pandas
