Onboard poetry-plugin-export package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -178,6 +178,7 @@ resources:
   - pluggy
   - ply
   - poetry-core
+  - poetry-plugin-export
   - pre-commit
   - prometheus-client
   - prompt-toolkit
