Onboard overrides package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -163,6 +163,7 @@ resources:
   - opentelemetry-sdk
   - opentelemetry-util-http
   - oscrypto
+  - overrides
   - packaging
   - pandas
   - pandocfilters
