Onboard typer package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -265,6 +265,7 @@ resources:
   - traitlets
   - trove-classifiers
   - typeguard
+  - typer
   - types-protobuf
   - types-psutil
   - types-python-dateutil
