Onboard pkginfo package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -72,6 +72,9 @@ packages:
   pexpect:
     requirements_in:
       - setuptools
+  pkginfo:
+    requirements_in:
+      - setuptools
   pkgutil-resolve-name:
     requirements_in:
       - setuptools
