--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -83,6 +83,7 @@ resources:
   - google-api-core
   - google-api-python-client
   - google-auth
+  - google-cloud-aiplatform
   - google-cloud-bigquery
   - google-cloud-bigquery-storage
   - google-cloud-bigtable
