Onboard google-cloud-audit-log package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -84,6 +84,7 @@ resources:
   - google-api-python-client
   - google-auth
   - google-cloud-aiplatform
+  - google-cloud-audit-log
   - google-cloud-bigquery
   - google-cloud-bigquery-storage
   - google-cloud-bigtable
