Onboard types-pyyaml package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -278,6 +278,7 @@ resources:
   - types-protobuf
   - types-psutil
   - types-python-dateutil
+  - types-pyyaml
   - types-requests
   - types-setuptools
   - typing-extensions
