Onboard fqdn package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -25,6 +25,9 @@ packages:
   flatbuffers:
     requirements_in:
       - setuptools
+  fqdn:
+    requirements_in:
+      - setuptools
   frozenlist:
     requirements_in:
       - Cython
