Onboard grpcio package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -101,6 +101,7 @@ resources:
   - graphql-core
   - graphviz
   - greenlet
+  - grpcio
   - grpcio-health-checking
   - grpcio-status
   - grpcio-tools
